--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "amahi"
 version = "0.1.0"
 edition = "2021"
-description = "Rust TDD test project"
+description = "Rust TDD and CLI test project"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
